Use ForwardRelativePath in coercer
Summary:
Coercer API accepts "Path" which is practically always a normalized target base path.

So replace `Path` with `ForwardRelativePath` in coercer.

Reviewed By: bobyangyf

shipit-source-id: 2e6c752f63