@@ -20,9 +20,9 @@ import static org.junit.Assert.assertTrue;
 import com.facebook.buck.core.cell.CellPathResolver;
 import com.facebook.buck.core.cell.TestCellPathResolver;
 import com.facebook.buck.core.model.UnconfiguredTargetConfiguration;
+import com.facebook.buck.core.path.ForwardRelativePath;
 import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
 import com.facebook.buck.rules.coercer.CoerceFailedException;
-import java.nio.file.Paths;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.ExpectedException;
@@ -40,7 +40,11 @@ public class BoolAttributeTest {
     BoolAttribute attr = new ImmutableBoolAttribute(false, "", true);
     boolean coerced =
         attr.getValue(
-            cellRoots, filesystem, Paths.get(""), UnconfiguredTargetConfiguration.INSTANCE, true);
+            cellRoots,
+            filesystem,
+            ForwardRelativePath.of(""),
+            UnconfiguredTargetConfiguration.INSTANCE,
+            true);
 
     assertTrue(coerced);
   }
@@ -52,6 +56,10 @@ public class BoolAttributeTest {
     BoolAttribute attr = new ImmutableBoolAttribute(false, "", true);
 
     attr.getValue(
-        cellRoots, filesystem, Paths.get(""), UnconfiguredTargetConfiguration.INSTANCE, "foo");
+        cellRoots,
+        filesystem,
+        ForwardRelativePath.of(""),
+        UnconfiguredTargetConfiguration.INSTANCE,
+        "foo");
   }
 }
