@@ -27,6 +27,7 @@ import com.facebook.buck.core.cell.TestCellPathResolver;
 import com.facebook.buck.core.model.BuildTarget;
 import com.facebook.buck.core.model.BuildTargetFactory;
 import com.facebook.buck.core.model.UnconfiguredTargetConfiguration;
+import com.facebook.buck.core.path.ForwardRelativePath;
 import com.facebook.buck.core.rules.actions.ActionRegistryForTests;
 import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
 import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystemFactory;
@@ -62,7 +63,7 @@ public class OutputListAttributeTest {
         attr.getValue(
             cellRoots,
             filesystem,
-            Paths.get(""),
+            ForwardRelativePath.of(""),
             UnconfiguredTargetConfiguration.INSTANCE,
             ImmutableList.of("foo/bar.cpp", "foo/baz.cpp"));
 
@@ -74,7 +75,11 @@ public class OutputListAttributeTest {
     thrown.expect(CoerceFailedException.class);
 
     attr.getValue(
-        cellRoots, filesystem, Paths.get(""), UnconfiguredTargetConfiguration.INSTANCE, 1);
+        cellRoots,
+        filesystem,
+        ForwardRelativePath.of(""),
+        UnconfiguredTargetConfiguration.INSTANCE,
+        1);
   }
 
   @Test
@@ -84,7 +89,7 @@ public class OutputListAttributeTest {
     attr.getValue(
         cellRoots,
         filesystem,
-        Paths.get(""),
+        ForwardRelativePath.of(""),
         UnconfiguredTargetConfiguration.INSTANCE,
         Runtime.NONE);
   }
@@ -105,7 +110,7 @@ public class OutputListAttributeTest {
         attr.getValue(
             cellRoots,
             filesystem,
-            Paths.get(""),
+            ForwardRelativePath.of(""),
             UnconfiguredTargetConfiguration.INSTANCE,
             ImmutableList.of("foo/baz.cpp", "foo/bar\0"));
     attr.getPostCoercionTransform()
@@ -120,7 +125,7 @@ public class OutputListAttributeTest {
         attr.getValue(
             cellRoots,
             filesystem,
-            Paths.get(""),
+            ForwardRelativePath.of(""),
             UnconfiguredTargetConfiguration.INSTANCE,
             ImmutableList.of("foo/baz.cpp", Paths.get("").toAbsolutePath().toString()));
     attr.getPostCoercionTransform()
@@ -135,7 +140,7 @@ public class OutputListAttributeTest {
         attr.getValue(
             cellRoots,
             filesystem,
-            Paths.get(""),
+            ForwardRelativePath.of(""),
             UnconfiguredTargetConfiguration.INSTANCE,
             ImmutableList.of("foo/baz.cpp", "../foo.txt"));
     attr.getPostCoercionTransform()
@@ -151,7 +156,7 @@ public class OutputListAttributeTest {
         attr.getValue(
             cellRoots,
             filesystem,
-            Paths.get(""),
+            ForwardRelativePath.of(""),
             UnconfiguredTargetConfiguration.INSTANCE,
             ImmutableList.of("subdir/other.cpp", "main.cpp"));
     Object coerced =
@@ -184,7 +189,7 @@ public class OutputListAttributeTest {
     attr.getValue(
         cellRoots,
         filesystem,
-        Paths.get(""),
+        ForwardRelativePath.of(""),
         UnconfiguredTargetConfiguration.INSTANCE,
         ImmutableList.of());
   }
@@ -195,7 +200,7 @@ public class OutputListAttributeTest {
         attr.getValue(
             cellRoots,
             filesystem,
-            Paths.get(""),
+            ForwardRelativePath.of(""),
             UnconfiguredTargetConfiguration.INSTANCE,
             ImmutableList.of());
     assertTrue(value.isEmpty());
