@@ -20,10 +20,10 @@ import static org.junit.Assert.assertEquals;
 import com.facebook.buck.core.cell.CellPathResolver;
 import com.facebook.buck.core.cell.TestCellPathResolver;
 import com.facebook.buck.core.model.UnconfiguredTargetConfiguration;
+import com.facebook.buck.core.path.ForwardRelativePath;
 import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
 import com.facebook.buck.rules.coercer.CoerceFailedException;
 import com.google.common.collect.ImmutableList;
-import java.nio.file.Paths;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.ExpectedException;
@@ -40,7 +40,11 @@ public class StringAttributeTest {
     StringAttribute attr = new ImmutableStringAttribute("foobaz", "", true, ImmutableList.of());
     String coerced =
         attr.getValue(
-            cellRoots, filesystem, Paths.get(""), UnconfiguredTargetConfiguration.INSTANCE, "bar");
+            cellRoots,
+            filesystem,
+            ForwardRelativePath.of(""),
+            UnconfiguredTargetConfiguration.INSTANCE,
+            "bar");
 
     assertEquals("bar", coerced);
   }
@@ -52,7 +56,11 @@ public class StringAttributeTest {
     StringAttribute attr = new ImmutableStringAttribute("foobaz", "", true, ImmutableList.of());
 
     attr.getValue(
-        cellRoots, filesystem, Paths.get(""), UnconfiguredTargetConfiguration.INSTANCE, 1);
+        cellRoots,
+        filesystem,
+        ForwardRelativePath.of(""),
+        UnconfiguredTargetConfiguration.INSTANCE,
+        1);
   }
 
   @Test
@@ -62,7 +70,11 @@ public class StringAttributeTest {
         new ImmutableStringAttribute("foobaz", "", true, ImmutableList.of("foo", "bar", "baz"));
     String value =
         attr.getValue(
-            cellRoots, filesystem, Paths.get(""), UnconfiguredTargetConfiguration.INSTANCE, "bar");
+            cellRoots,
+            filesystem,
+            ForwardRelativePath.of(""),
+            UnconfiguredTargetConfiguration.INSTANCE,
+            "bar");
     assertEquals("bar", value);
   }
 
@@ -71,7 +83,11 @@ public class StringAttributeTest {
     StringAttribute attr = new ImmutableStringAttribute("foobaz", "", true, ImmutableList.of());
     String value =
         attr.getValue(
-            cellRoots, filesystem, Paths.get(""), UnconfiguredTargetConfiguration.INSTANCE, "bar");
+            cellRoots,
+            filesystem,
+            ForwardRelativePath.of(""),
+            UnconfiguredTargetConfiguration.INSTANCE,
+            "bar");
 
     assertEquals("bar", value);
   }
@@ -85,6 +101,10 @@ public class StringAttributeTest {
         new ImmutableStringAttribute("foobaz", "", true, ImmutableList.of("foo", "baz"));
 
     attr.getValue(
-        cellRoots, filesystem, Paths.get(""), UnconfiguredTargetConfiguration.INSTANCE, "bar");
+        cellRoots,
+        filesystem,
+        ForwardRelativePath.of(""),
+        UnconfiguredTargetConfiguration.INSTANCE,
+        "bar");
   }
 }
