@@ -19,10 +19,9 @@ import static com.facebook.buck.core.cell.TestCellBuilder.createCellRoots;
 import static org.junit.Assert.assertEquals;
 
 import com.facebook.buck.core.model.UnconfiguredTargetConfiguration;
+import com.facebook.buck.core.path.ForwardRelativePath;
 import com.facebook.buck.io.filesystem.ProjectFilesystem;
 import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.logging.Level;
 import org.junit.Before;
 import org.junit.Test;
@@ -31,7 +30,7 @@ public class LogLevelTypeCoercerTest {
 
   private LogLevelTypeCoercer coercer;
   private ProjectFilesystem filesystem = new FakeProjectFilesystem();
-  private Path pathFromRoot = Paths.get("third-party/java");
+  private ForwardRelativePath pathFromRoot = ForwardRelativePath.of("third-party/java");
 
   @Before
   public void setUp() {
