@@ -20,12 +20,11 @@ import static com.facebook.buck.core.cell.TestCellBuilder.createCellRoots;
 import static org.junit.Assert.assertThat;
 
 import com.facebook.buck.core.model.UnconfiguredTargetConfiguration;
+import com.facebook.buck.core.path.ForwardRelativePath;
 import com.facebook.buck.io.filesystem.ProjectFilesystem;
 import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
 import com.facebook.buck.rules.macros.Macro;
 import com.google.common.collect.ImmutableList;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import org.hamcrest.Matchers;
 import org.junit.Test;
 
@@ -33,7 +32,7 @@ public class ZeroArgMacroTypeCoercerTest {
 
   @Test
   public void test() throws CoerceFailedException {
-    Path basePath = Paths.get("java/com/facebook/buck/example");
+    ForwardRelativePath basePath = ForwardRelativePath.of("java/com/facebook/buck/example");
     ProjectFilesystem filesystem = new FakeProjectFilesystem();
     ZeroArgMacro macro = new ZeroArgMacro();
     ZeroArgMacroTypeCoercer<ZeroArgMacro> coercer =
@@ -50,7 +49,7 @@ public class ZeroArgMacroTypeCoercerTest {
 
   @Test(expected = CoerceFailedException.class)
   public void testIncorrectArgs() throws CoerceFailedException {
-    Path basePath = Paths.get("java/com/facebook/buck/example");
+    ForwardRelativePath basePath = ForwardRelativePath.of("java/com/facebook/buck/example");
     ProjectFilesystem filesystem = new FakeProjectFilesystem();
     ZeroArgMacroTypeCoercer<ZeroArgMacro> coercer =
         new ZeroArgMacroTypeCoercer<>(ZeroArgMacro.class, new ZeroArgMacro());
